# ChangeLog for dev-libs/gdl
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.2 2006/07/16 15:25:33 dertobi123 Exp $

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> gdl-0.6.1.ebuild:
  Added ~ppc

*gdl-0.6.1 (29 Jun 2006)

  29 Jun 2006; Martin Schlemmer <azarah@gentoo.org> +metadata.xml,
  +gdl-0.6.1.ebuild:
  Import.  Only saw bug #8561 after I added, so imported some changes.
