@@ -1,0 +1,3 @@
+MD5 934fa8f8c1bce88537c1548d2d1090c7 gdl-0.7.0.tar.bz2 438469
+RMD160 3a9271d866d83fbcff152898ade2eb680858ca54 gdl-0.7.0.tar.bz2 438469
+SHA256 b8667b78acb055e7e8ba0cc48fa310fb6559d20888fe48fd8cf8f0e89e074911 gdl-0.7.0.tar.bz2 438469
