@@ -1,0 +1,3 @@
+MD5 a453f4ce27c3d7890d7156c1191bbbba gnome-build-0.1.4.tar.bz2 455453
+RMD160 857acfa444d6cf9dcc359e86a4c8c1998e5f2ae0 gnome-build-0.1.4.tar.bz2 455453
+SHA256 885c24ca6c0382b22d69a1778ae26601d305c6b2cb6f3bca9b0025fb8fe029c4 gnome-build-0.1.4.tar.bz2 455453
