@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/gnome-build
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/Attic/ChangeLog,v 1.1 2006/06/29 20:52:20 azarah Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gnome-build/Attic/ChangeLog,v 1.2 2007/01/30 16:47:56 compnerd Exp $
+
+*gnome-build-0.1.4 (30 Jan 2007)
+
+  30 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org>
+  +gnome-build-0.1.4.ebuild:
+  Version bump
 
 *gnome-build-0.1.3 (29 Jun 2006)
 
