@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/gdl
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.2 2006/07/16 15:25:33 dertobi123 Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/gdl/ChangeLog,v 1.3 2007/01/30 16:46:55 compnerd Exp $
+
+*gdl-0.7.0 (30 Jan 2007)
+
+  30 Jan 2007; Saleem Abdulrasool <compnerd@gentoo.org> +gdl-0.7.0.ebuild:
+  Version bump
 
   16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org> gdl-0.6.1.ebuild:
   Added ~ppc
